--- a/RectangleIntersections/Properties/launchSettings.json
+++ b/RectangleIntersections/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "RectangleIntersections": {
-      "commandName": "Project",
-      "commandLineArgs": "C:\\Users\\david\\source\\repos\\RectangleIntersections\\RectangleInput3.json"
+      "commandName": "Project"
     }
   }
 }
